--- a/app.json
+++ b/app.json
@@ -23,13 +23,11 @@
         },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1987418803:AAGSpLTEz3_lX_R61kFpfVNBduDoG_ClYKo"
+            "value": "1987418803:AAGSpLTEz3_lX_R61kFpfVNBduDoG_ClYKo"
         },
         "BOT_TOKEN2": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1806841873:AAF-HSuVbBqN2yjNb7R6HAYvQvyanbUuAzo"
+            "value": "1806841873:AAF-HSuVbBqN2yjNb7R6HAYvQvyanbUuAzo"
 
         },
         "BOT_TOKEN3": {
@@ -39,14 +37,12 @@
         },
         "BOT_TOKEN4": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1822994473:AAFq5D_3Rz_PEaNqeVgMLesNozjeLMpTYDs"
+            "value": "1822994473:AAFq5D_3Rz_PEaNqeVgMLesNozjeLMpTYDs"
             
         },
         "BOT_TOKEN5": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1808916897:AAF_Xh8a5f2n6zlnk2semBAkCCHjhgULBNA"
+            "value": "1808916897:AAF_Xh8a5f2n6zlnk2semBAkCCHjhgULBNA"
            
         },
         "BOT_TOKEN6": {
@@ -56,8 +52,7 @@
         },
         "BOT_TOKEN7": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1921188589:AAFTp2_V6GC1mj5kfy8ey93sndJMACdv7iY"
+            "value": "1921188589:AAFTp2_V6GC1mj5kfy8ey93sndJMACdv7iY"
             
         },
         "BOT_TOKEN8": {
@@ -77,55 +72,46 @@
         },
         "BOT_TOKEN11": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1958436910:AAH3kB9WQS7WRFNgguRfkUaYsrvqBkbFkpg"
+            "value": "1958436910:AAH3kB9WQS7WRFNgguRfkUaYsrvqBkbFkpg"
         },
         "BOT_TOKEN12": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1966367464:AAGuob0etF_5BAmmLiPECKbWq03OGAASmLM"
+            "value": "1966367464:AAGuob0etF_5BAmmLiPECKbWq03OGAASmLM"
 
         },
         "BOT_TOKEN13": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1998543801:AAEOAder5j9A2EmxyJjLRFZXHz41ypzLedg"
+            "value": "1998543801:AAEOAder5j9A2EmxyJjLRFZXHz41ypzLedg"
            
         },
         "BOT_TOKEN14": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1977741444:AAGRyJc0SYKnDkKN84SaHF3cnw5vElmELfc"
+            "value": "1977741444:AAGRyJc0SYKnDkKN84SaHF3cnw5vElmELfc"
             
         },
         "BOT_TOKEN15": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1966300481:AAEdmpVSjpC1YkW_HlX0FUTjvwGnf1t1iyo"
+            "value": "1966300481:AAEdmpVSjpC1YkW_HlX0FUTjvwGnf1t1iyo"
            
         },
         "BOT_TOKEN16": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1901733871:AAF0uFu8l9EHm49KJxMPWuDSXRVZO3A8R_Y"
+            "value": "1901733871:AAF0uFu8l9EHm49KJxMPWuDSXRVZO3A8R_Y"
             
         },
         "BOT_TOKEN17": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1999640631:AAEITWzo_m-pVChxQBJxlgTWY0HRg0HVpFE"
+            "value": "1999640631:AAEITWzo_m-pVChxQBJxlgTWY0HRg0HVpFE"
             
         },
         "BOT_TOKEN18": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1913052823:AAHsbK45aqC_Zl-KuUOhvoOGeT6eRQTumjk"
+            "value": "1913052823:AAHsbK45aqC_Zl-KuUOhvoOGeT6eRQTumjk"
             
         },
         "BOT_TOKEN19": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "
-1963862043:AAGmRT6NUZEZWMd_9pra_eYjTXLE_u8EDRk"
+            "value": "1963862043:AAGmRT6NUZEZWMd_9pra_eYjTXLE_u8EDRk"
             
         },
         "BOT_TOKEN20": {
