--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
         },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1987418803:AAGSpLTEz3_lX_R61kFpfVNBduDoG_ClYKo"
+            "value": ""
         },
         "BOT_TOKEN2": {
             "description": "Bot token, get it from @BotFather.",
@@ -32,91 +32,91 @@
         },
         "BOT_TOKEN3": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1853446514:AAE6W1ua8DBnp--xvBMZrNK-U8JidnEaPEM"
+            "value": ""
            
         },
         "BOT_TOKEN4": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1822994473:AAFq5D_3Rz_PEaNqeVgMLesNozjeLMpTYDs"
+            "value": ""
             
         },
         "BOT_TOKEN5": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1808916897:AAF_Xh8a5f2n6zlnk2semBAkCCHjhgULBNA"
+            "value": ""
            
         },
         "BOT_TOKEN6": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1923608671:AAEr2aPcxXOST90HIC0CYH9rD-5hxiPet4k"
+            "value": ""
             
         },
         "BOT_TOKEN7": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1921188589:AAFTp2_V6GC1mj5kfy8ey93sndJMACdv7iY"
+            "value": ""
             
         },
         "BOT_TOKEN8": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1923354248:AAHKWxFLneb_KaHixgybo8-l4r3bqL4obkE"
+            "value": ""
             
         },
         "BOT_TOKEN9": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1905138184:AAH7bUPUgVyJUpwwhoW1628e33pLeQI0FcU"
+            "value": ""
             
         },
         "BOT_TOKEN10": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1900872211:AAHYdnyIY5PbK2Qpmz1wEl4Smt-dVrgQwiU"
+            "value": ""
             
         },
         "BOT_TOKEN11": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1958436910:AAH3kB9WQS7WRFNgguRfkUaYsrvqBkbFkpg"
+            "value": ""
         },
         "BOT_TOKEN12": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1966367464:AAGuob0etF_5BAmmLiPECKbWq03OGAASmLM"
+            "value": ""
 
         },
         "BOT_TOKEN13": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1998543801:AAEOAder5j9A2EmxyJjLRFZXHz41ypzLedg"
+            "value": ""
            
         },
         "BOT_TOKEN14": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1977741444:AAGRyJc0SYKnDkKN84SaHF3cnw5vElmELfc"
+            "value": ""
             
         },
         "BOT_TOKEN15": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1966300481:AAEdmpVSjpC1YkW_HlX0FUTjvwGnf1t1iyo"
+            "value": ""
            
         },
         "BOT_TOKEN16": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1901733871:AAF0uFu8l9EHm49KJxMPWuDSXRVZO3A8R_Y"
+            "value": ""
             
         },
         "BOT_TOKEN17": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1999640631:AAEITWzo_m-pVChxQBJxlgTWY0HRg0HVpFE"
+            "value": ""
             
         },
         "BOT_TOKEN18": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1913052823:AAHsbK45aqC_Zl-KuUOhvoOGeT6eRQTumjk"
+            "value": ""
             
         },
         "BOT_TOKEN19": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1963862043:AAGmRT6NUZEZWMd_9pra_eYjTXLE_u8EDRk"
+            "value": ""
             
         },
         "BOT_TOKEN20": {
             "description": "Bot token, get it from @BotFather.",
-            "value": "1770772621:AAEpTMmAfN9-gbjRq8orTF4CLA59ursDcLk"
+            "value": ""
             
         },
         "SUDO_USERS": {
