--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "Ustad-op",
         "SpamBots"
     ],
-    "repository": "https://t.me/ITXX_HARRY",
+    "repository": "https://github.com/Mohan745/ELITEBOY_SPAMBOT",
     "website": "https://t.me/ITXX_HARRY",
     "success_url": "https://t.me/ITXX_HARRY",
     "env": {
